
plugins {
  id 'java'
  id 'application'
}

group = 'com.tasktracker'
version = '1.0.0'
sourceCompatibility = '17'

repositories {
  mavenCentral()
}

dependencies {
  // Jackson para serialização/deserialização JSON
  implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'

  // Dependências para testes (opcional)
  testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
  mainClass = 'com.tasktracker.Main'
}

test {
  useJUnitPlatform()
}

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}
